# hexapod_ros

./: README.md  install.sh
hexapod_bringup/launch/: all_local_debug.launch  hexapod_full.launch  hexapod_simple.launch  rviz.launch
hexapod_bringup/launch/components/: joy_teleop.launch  rtabmap.launch  rtabmap_AC.launch  sounds.launch
hexapod_controller/src/: control.cpp  hexapod_controller.cpp  servo_driver.cpp
hexapod_description/params/: dynamixel.yaml  hexapod.yaml  joystick_xb.yaml  phantomX.yaml
hexapod_description/urdf/: phantomX_model.xacro
hexapod_moves/: CMakeLists.txt  hexapod_moves.xml  package.xml
hexapod_moves/include/: hexapod_moves.h  hexapod_teleop_joystick.h
hexapod_moves/src/: hexapod_moves.cpp  hexapod_teleop_joystick.cpp
hexapod_navigation/config/: planner.yaml
hexapod_sound/: w_yoda Copy.pkf  w_yoda.pkf
hexapod_sound/src/: hexapod_sound.cpp
hexapod_teleop_joystick/src/: hexapod_teleop_joystick.cpp
xv_11_laser_driver-hydro-devel/src/: xv11_laser.cpp
